--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,9 @@
     height: 100vh;
    
   }
-.homee{
-    background-color: black;
-    color: beige;
+.home{
+    background-color: #000814;
+    color: #CAF0F8;
 }
 
 .map-container{
