--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,102 +1,111 @@
 .navbar {
-    width: 100%;
-    height: 100px;
-    background-color: #121619;
-    display: flex;
-    flex-direction: row;
-  }
+  width: 100%;
+  height: 100%;
+  background-color: rgb(35, 42, 179)!important;
+  display: flex;
+  flex-direction: row;
+  font-family: 'Ibarra Real Nova', serif;
+}
+
+.navbar .leftSide {
+  flex: 25%;
+  height: 100%;
+  display: flex;
+  align-items: left;
+  padding-left: 50px;
+  font-size: 30px;
+  color: #ffe8d6!important; 
   
+}
+
+.drop-down{
+  background: blue;
+  color:aquamarine;
+}
+
+
+.navbar .rightSide {
+  flex: 50%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  font-size: 20px;
+  font-display: bold;
+  color: #ffe8d6 !important;  
+}
+
+/* .navbar a {
+  color: white;
+  text-decoration: none;
+  margin: 20px;
+}
+
+.navbar .rightSide button {
+  background-color: transparent;
+  border: none;
+  color: white;
+  cursor: pointer;
+} */
+
+/* .navbar .rightSide svg {
+  font-size: 40px;
+}
+
+.navbar #open {
+  padding-left: 0px;
+}
+.navbar #open img {
+  display: none;
+}
+
+.navbar #close img {
+  display: inherit;
+}
+
+.navbar #open .hiddenLinks {
+  display: inherit;
+  margin-left: 30px;
+}
+
+.navbar #close .hiddenLinks {
+  display: none;
+}
+
+.navbar #open a {
+  width: 70px;
+  margin: 5px;
+}
+@media only screen and (max-width: 900px) {
+  .navbar .rightSide a {
+    width: 70px;
+  }
   .navbar .leftSide {
-    flex: 50%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    padding-left: 150px;
+    padding-left: 50px;
   }
-  
-  .navbar .leftSide img {
-    width: 70px;
+}
+
+@media only screen and (max-width: 600px) {
+  .navbar .rightSide a {
+    display: none;
   }
-  
+
   .navbar .rightSide {
-    flex: 50%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
+    padding-right: 50px;
   }
-  
-  .navbar a {
-    color: white;
-    text-decoration: none;
-    margin: 20px;
-  }
-  
+
   .navbar .rightSide button {
-    background-color: transparent;
-    border: none;
-    color: white;
-    cursor: pointer;
-  }
-  
-  .navbar .rightSide svg {
-    font-size: 40px;
-  }
-  
-  .navbar #open {
-    padding-left: 0px;
-  }
-  .navbar #open img {
-    display: none;
-  }
-  
-  .navbar #close img {
     display: inherit;
   }
-  
-  .navbar #open .hiddenLinks {
-    display: inherit;
-    margin-left: 30px;
-  }
-  
-  .navbar #close .hiddenLinks {
+} */
+
+@media only screen and (min-width: 600px) {
+  .navbar .rightSide button {
     display: none;
   }
-  
-  .navbar #open a {
-    width: 70px;
-    margin: 5px;
+
+  .hiddenLinks {
+    display: none;
   }
-  @media only screen and (max-width: 900px) {
-    .navbar .rightSide a {
-      width: 70px;
-    }
-    .navbar .leftSide {
-      padding-left: 50px;
-    }
-  }
-  
-  @media only screen and (max-width: 600px) {
-    .navbar .rightSide a {
-      display: none;
-    }
-  
-    .navbar .rightSide {
-      justify-content: flex-end;
-      padding-right: 50px;
-    }
-  
-    .navbar .rightSide button {
-      display: inherit;
-    }
-  }
-  
-  @media only screen and (min-width: 600px) {
-    .navbar .rightSide button {
-      display: none;
-    }
-  
-    .hiddenLinks {
-      display: none;
-    }
-  }
+}
