added login functionality

--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -47,3 +47,8 @@
   font-size: small ;
   font-weight: 500;
 }
+.loginalert{
+  width: 12cm;
+  margin-left: -2cm !important;
+  margin-top: -0.5cm;
+}
