--- a/src/styles/ShowEvent.css
+++ b/src/styles/ShowEvent.css
@@ -71,8 +71,10 @@
 }
 
 .event-heading{
-    color: white;
+    color: rgba(16, 5, 88, 0.797);
     padding-right: 30px;
+    text-align: center;
+    font-size: 24px;
 }
 
 .se-right{
@@ -85,11 +87,13 @@
     padding-left: 25px;
 }
 .se-right-card{
+    margin-top: 25px;
     display: flex;
     overflow-x: auto;
     width: 80%;
     height: 100%;
     padding-right: 10px;
+    /* border-radius: 10px; */
     
 }
 .card-img{
@@ -135,7 +139,7 @@
 .details-container{
     font-size: 15px;
     padding-right: 10px;
-    text-align: end;
+    text-align: center;
     text-decoration: none;
 }
 a:link { text-decoration: none; }
