--- a/src/styles/Event.css
+++ b/src/styles/Event.css
@@ -86,7 +86,7 @@
     color: rgb(22, 3, 3);
     display: flex;
     overflow-x: auto;
-    width: 80%;
+    width: 100%;
     height: 150%;
     padding-right: 20px;
     margin-top: 30px;
@@ -149,3 +149,11 @@
     text-decoration: none;
 }
 a:link { text-decoration: none; }
+
+.event-search {
+  max-width: 300px;
+}
+
+.event.filter {
+  max-width: 300px;
+}
