--- a/src/styles/Addevent.css
+++ b/src/styles/Addevent.css
@@ -73,7 +73,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    
+    overflow: auto;
 }
 
 .addevent-name{
