pulled from branch

--- a/src/styles/Event.css
+++ b/src/styles/Event.css
@@ -1,6 +1,6 @@
 .e-main {
     min-height: calc(100vh -  71px);
-    background-color: #87CEEB;
+    background-color: white;
     padding: 30px 50px;
     font-family: 'Ibarra Real Nova', serif;
 }
