Changed background color for profile pages

--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -59,7 +59,7 @@
     background-color: #132584;
     border: 1px solid #05386B;
     border-radius: 6px;
-    color: white;
+    color: black;
     padding: 10px 25px;
     text-align: center;
     text-decoration: none;
