--- a/src/styles/ShowEvent.css
+++ b/src/styles/ShowEvent.css
@@ -1,6 +1,6 @@
 .se-main {
     height: calc(100vh -  71px);
-    background-color: #87CEEB;
+    background-color: #ffffffd7;
     padding: 30px 50px;
     font-family: 'Ibarra Real Nova', serif;
 }
@@ -9,7 +9,7 @@
     height: calc(100vh -  130px);
     border: 2px solid #6d1ca3;
     padding: 10px;
-    background-color: #7209B7;
+    background-color: #87CEEB;
     border-radius: 5px;
     display: flex;
     flex-direction: row;
@@ -56,7 +56,7 @@
     background-color: #132584;
     border: 1px solid #05386B;
     border-radius: 6px;
-    color: white;
+    color: black;
     padding: 10px 25px;
     text-align: center;
     text-decoration: none;
