--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,6 +1,6 @@
 .about-main {
     height: calc(100vh -  71px);
-    background-color: #87CEEB;
+    background-color: #ffffffd7;
     padding: 30px 50px;
     font-family: 'Ibarra Real Nova', serif;
 }
@@ -9,7 +9,7 @@
     height: calc(100vh -  130px);
     border: 2px solid #6d1ca3;
     padding: 10px;
-    background-color: #7209B7;
+    background-color: #87CEEB;
     border-radius: 5px;
     display: flex;
     flex-direction: row;
@@ -68,7 +68,7 @@
 
 .about-right{
     width: 900px;
-    color :white;
+    color :black;
     font-size: 18px;
     display: flex;
     flex-direction: column;
