--- a/src/styles/Addevent.css
+++ b/src/styles/Addevent.css
@@ -1,22 +1,21 @@
 .addevent-main {
     height: calc(100vh);
-    background-color: #87CEEB;
+    background-color: #ffffffd7;
     padding: 30px 50px;
     font-family: 'Ibarra Real Nova', serif;
-    overflow: auto;
 }
 
 .addevent-box-main{
     padding: 5%;
-    /* height: calc(95vh); */
+    height: calc(100vh -  130px);
     border: 2px solid #6d1ca3;
     padding: 10px;
-    background-color: #7209B7;
+    background-color: #87CEEB;
     border-radius: 5px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
     overflow: auto;
 }
 
@@ -60,7 +59,7 @@
     background-color: #132584;
     border: 1px solid #05386B;
     border-radius: 6px;
-    color: white;
+    color: black;
     padding: 10px 25px;
     text-align: center;
     text-decoration: none;
@@ -73,7 +72,7 @@
 
 .addevent-right{
     width: 700px;
-    color :white;
+    color :black;
     font-size: 15px;
     display: flex;
     flex-direction: column;
