--- a/src/styles/Org.css
+++ b/src/styles/Org.css
@@ -1,6 +1,6 @@
 .org-main {
     height: calc(100vh -  71px);
-    background-color: #87CEEB;
+    background-color: #ffffffd7;
     padding: 30px 50px;
     font-family: 'Ibarra Real Nova', serif;
 }
@@ -9,7 +9,7 @@
     height: calc(100vh -  130px);
     border: 2px solid #6d1ca3;
     padding: 10px;
-    background-color: #7209B7;
+    background-color: #87CEEB;
     border-radius: 5px;
     display: flex;
     flex-direction: row;
@@ -73,7 +73,7 @@
 }
 .org-right-text{
     width: 500px;
-    color: whitesmoke;
+    color: black;
     margin-top: 40px;
     padding: 20px;
 }
